Bug 708962 - Start Telemetry service at application start to avoid deadlock from GetService spinning event loop. r=benjamin